#266 - Matched image background color in document theater same as media theater

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1928,7 +1928,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		.img-section {
 			overflow: auto;
 			height: calc(90vh - 30px);
-			background-color: #fff;
+			background-color: #000;
 			display: -webkit-box;
 			display: -ms-flexbox;
 			display: flex;
@@ -1940,7 +1940,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			justify-content: center;
 
 			img {
-				padding: 20px;
+				padding: 20px 0;
 			}
 
 		}
