--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -601,12 +601,20 @@ table.extension-listing thead th {
   padding: 12px 18px;
 }
 
-table.extension-listing thead th.ext-head-extension, table.extension-listing thead th.ext-head-icon {
+table.extension-listing thead th.ext-head-extension {
   width: 5%;
+}
+
+table.extension-listing thead th.ext-head-icon {
+  width: 10%;
 }
 
 table.extension-listing thead th.ext-head-desc {
   width: 12%;
+}
+
+table.extension-listing thead th.ext-head-mime {
+  width: 26%;
 }
 
 table.extension-listing thead td.ext-head-enable {
@@ -695,6 +703,9 @@ table.extension-listing tfoot td #btn-check-mime-type {
     width: 100% !important;
     box-sizing: border-box;
   }
+  table.extension-listing td > i {
+    margin: 10px 10px 0 0;
+  }
   table.extension-listing td:before {
     top: 0;
     right: 20px !important;
@@ -706,6 +717,84 @@ table.extension-listing tfoot td #btn-check-mime-type {
   table.extension-listing td .extension-mime {
     margin-bottom: 15px;
   }
+}
+
+table.extension-listing select[name="extension-icon"] {
+  display: none;
+}
+
+table.extension-listing .icon-select-main {
+  position: relative;
+}
+
+table.extension-listing .icon-select-main .icon-select-button {
+  font-size: 14px;
+  line-height: 2;
+  color: #32373c;
+  border-color: #7e8993;
+  border-width: 1px;
+  box-shadow: none;
+  border-radius: 3px;
+  padding: 3px 8px 0 24px;
+  min-height: 30px;
+  max-width: 25rem;
+  -webkit-appearance: none;
+  background: #fff url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M5%206l5%205%205-5%202%201-7%207-7-7%202-1z%22%20fill%3D%22%23555%22%2F%3E%3C%2Fsvg%3E) no-repeat left 5px top 55%;
+  background-size: 16px 16px;
+  cursor: pointer;
+  vertical-align: middle;
+  max-width: 100%;
+  width: 100%;
+}
+
+table.extension-listing .icon-select-main .icon-select-button li {
+  list-style: none;
+  margin: 0;
+  white-space: nowrap;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: right;
+}
+
+table.extension-listing .icon-select-main .icon-select-button i {
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+table.extension-listing .icon-select-main .custom-extension-list {
+  position: absolute;
+  right: 0;
+  left: 0;
+  min-width: 200px;
+  background-color: #fff;
+  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.1);
+  padding: 10px 0;
+  bottom: 100%;
+  max-height: 60vh;
+  overflow: auto;
+  display: none;
+}
+
+table.extension-listing .icon-select-main .custom-extension-list .custom-extension-list-select {
+  font-size: 0;
+}
+
+table.extension-listing .icon-select-main .custom-extension-list li {
+  list-style: none;
+  cursor: pointer;
+  font-size: 13px;
+  padding: 5px 10px;
+}
+
+table.extension-listing .icon-select-main .custom-extension-list li:hover {
+  background-color: #f9f9f9;
+}
+
+table.extension-listing .icon-select-main .custom-extension-list i {
+  font-size: 25px;
+  margin-left: 10px;
+  vertical-align: middle;
 }
 
 @media screen and (max-width: 1023px) {
