--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1928,7 +1928,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		.img-section {
 			overflow: auto;
 			height: calc(90vh - 30px);
-			background-color: #000;
+			background-color: #fff;
 			display: -webkit-box;
 			display: -ms-flexbox;
 			display: flex;
@@ -1938,6 +1938,22 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			-webkit-box-pack: center;
 			-ms-flex-pack: center;
 			justify-content: center;
+
+			.img-block-wrap {
+				height: calc(90vh - 30px);
+				width: 100%;
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-align: center;
+				-ms-flex-align: center;
+				align-items: center;
+				-webkit-box-pack: center;
+				-ms-flex-pack: center;
+				justify-content: center;
+				background-color: #000;
+				overflow: auto;
+			}
 
 			img {
 				padding: 20px 0;
