#266 - Fixed image issue in document theater.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1957,6 +1957,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 			img {
 				padding: 20px 0;
+				max-height: calc(90vh - 30px);
 			}
 
 		}
