#266 - Fixes comment document more option overflow issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1789,7 +1789,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 }
 
-.activity.activity_update .activity-comments {
+.activity-item.activity_update .activity-comments {
 
 	.document-detail-wrap .document-extension-description {
 		max-width: calc(100% - 55px);
