admin icon list formatting

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -602,11 +602,11 @@ table.extension-listing thead th {
 }
 
 table.extension-listing thead th.ext-head-extension {
-  width: 10%;
+  width: 2em;
 }
 
 table.extension-listing thead th.ext-head-icon {
-  width: 15%;
+  width: 1.5em;
 }
 
 table.extension-listing thead th.ext-head-desc {
@@ -625,8 +625,10 @@ table.extension-listing tbody td {
   padding: 10px;
 }
 
-table.extension-listing tbody td i {
-  font-size: 40px;
+table.extension-listing tbody td i.bb-icon {
+  font-size: 30px;
+  color: #999;
+  margin-left: 8px;
   vertical-align: middle;
 }
 
@@ -757,7 +759,6 @@ table.extension-listing .icon-select-main .icon-select-button {
   border-radius: 3px;
   padding: 3px 24px 3px 8px;
   min-height: 30px;
-  max-width: 25rem;
   -webkit-appearance: none;
   background: #fff url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M5%206l5%205%205-5%202%201-7%207-7-7%202-1z%22%20fill%3D%22%23555%22%2F%3E%3C%2Fsvg%3E) no-repeat right 5px top 55%;
   background-size: 16px 16px;
