--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1662,6 +1662,16 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 }
 
+.dz-preview.dz-image-preview .dz-image {
+	height: 120px;
+
+	img {
+		max-width: 120px;
+		height: 100%;
+		object-fit: contain;
+	}
+}
+
 #media-stream .document-data-table-head {
 	display: -webkit-box;
 	display: -ms-flexbox;
