--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -678,7 +678,7 @@ table.extension-listing {
 		}
 	}
 
-	tbody tr td input.extension-mime[type="text"] {
+	tbody tr.custom-extension td input.extension-mime[type="text"] {
 		width: 60%;
 	}
 
@@ -744,7 +744,7 @@ table.extension-listing {
 			padding: 10px 0 0 10px !important;
 		}
 
-		tbody{
+		tbody {
 
 			td {
 				padding-left: 10px !important;
