--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -445,44 +445,38 @@
 
 	.medium-editor-action-bold b:before {
 		content: "\e94a";
+		font-size: 18px;
 	}
 
 	.medium-editor-action-italic b:before {
 		content: "\e949";
+		font-size: 18px;
 	}
 
 	.medium-editor-action-unorderedlist b:before {
-		content: "\e9a3";
-		font-size: 14px;
+		content: "\e9c9";
 		vertical-align: middle;
 		display: inline-block;
-		margin-top: 3px;
 	}
 
 	.medium-editor-action-orderedlist b:before {
-		content: "\e9a4";
-		font-size: 15px;
+		content: "\e9ca";
 		vertical-align: middle;
 		display: inline-block;
-		margin-top: 2px;
 	}
 
 	.medium-editor-action-quote b:before {
-		content: "\e9a5";
-		font-size: 13px;
-		margin-top: 3px;
+		content: "\e9cb";
 		display: inline-block;
 	}
 
 	.medium-editor-action-anchor b:before {
-		content: "\e816";
-		font-size: 20px;
+		content: "\e816";		
+		font-size: 19px;
 	}
 
 	.medium-editor-action-pre b:before {
-		content: "\e962";
-		font-size: 16px;
-		margin-top: 2px;
+		content: "\e9c7";
 		display: inline-block;
 	}
 
@@ -523,12 +517,10 @@
 	}
 
 	.bb-icon-text-format:before {
-		font-size: 15px;
-		vertical-align: top;
-		margin-top: 4px;
 		display: inline-block;
 		width: 23px;
 		color: rgba(18, 43, 70, 0.4);
+		font-size: 26px;
 	}
 
 	.emojionearea .emojionearea-button:before {
