--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -12073,11 +12073,24 @@ a.theater-command {
   visibility: visible;
 }
 
+[dir=rtl] a.theater-command {
+  right: auto;
+  left: 0;
+  justify-content: center;
+}
+
 a.theater-command.bb-next-media {
   right: auto;
   left: 0;
   width: 80%;
   justify-content: flex-end;
+}
+
+[dir=rtl] a.theater-command.bb-next-media {
+  left: auto;
+  right: 0;
+  width: 20%;
+  justify-content: center;
 }
 
 .bb-media-section {
@@ -13326,11 +13339,21 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   padding: 0;
 }
 
+[dir=rtl] .bb-document-theater .bb-media-section .theater-command.bb-prev-document {
+  right: auto;
+  left: -45px;
+}
+
 .bb-document-theater .bb-media-section .theater-command.bb-next-document {
   right: auto;
   left: -45px;
   width: 45px;
   padding: 0;
+}
+
+[dir=rtl] .bb-document-theater .bb-media-section .theater-command.bb-next-document {
+  right: -45px;
+  left: auto;
 }
 
 .bb-document-theater .bb-media-section.bb-media-no-preview {
@@ -14232,6 +14255,11 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   margin-right: 6px;
   color: inherit;
   font-weight: 400;
+  float: left;
+}
+
+[dir=rtl] #bp-media-single-folder .bp-media-header-wrap .document-breadcrumb li:after {
+  content: "\f341";
 }
 
 #bp-media-single-folder .bp-media-header-wrap .document-breadcrumb li:last-child a {
@@ -14603,6 +14631,13 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   line-height: 1;
 }
 
+[dir=rtl] .location-folder-list-wrap-main .ac_document_search_folder_list .breadcrumbs-append-ul-li .item span:before, [dir=rtl]
+.location-folder-list-wrap-main .location-folder-list-wrap .breadcrumbs-append-ul-li .item span:before {
+  content: "\e8ab";
+  float: right;
+  margin-top: 4px;
+}
+
 .location-folder-list-wrap-main .ac_document_search_folder_list .breadcrumbs-append-ul-li .item span,
 .location-folder-list-wrap-main .location-folder-list-wrap .breadcrumbs-append-ul-li .item span {
   display: inline-block !important;
@@ -14721,6 +14756,12 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   font-size: 16px;
 }
 
+[dir=rtl] .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span:before, [dir=rtl]
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:before {
+  float: right;
+  margin-right: 0;
+}
+
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span:hover,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:hover {
   background-color: #fbfbfc;
@@ -14749,6 +14790,17 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   height: auto;
   width: auto;
   transition: all ease 0.3s;
+}
+
+[dir=rtl] .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li .sub-menu-anchor, [dir=rtl]
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li .sub-menu-anchor {
+  left: initial;
+  right: 5px;
+}
+
+[dir=rtl] .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li .sub-menu-anchor:before, [dir=rtl]
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li .sub-menu-anchor:before {
+  content: '\e8ab';
 }
 
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li ul,
