--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1864,6 +1864,10 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 	.bb-media-model-inner {
 		overflow: visible;
+
+		.bb-media-info-section.document .avatar {
+			border-radius: 50%;
+		}
 	}
 
 	.bb-media-section {
@@ -1933,29 +1937,13 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 					white-space: nowrap;
 					text-overflow: ellipsis;
 					padding: 5px;
+					margin-bottom: 0;
 				}
 
 				a.download-button {
-					padding: 10px 14px;
 					display: block;
-					font-size: 17px;
 					line-height: 1;
-					color: #7f868f;
-
-					> i {
-						padding-right: 8px;
-						font-size: 17px;
-						display: inline-block;
-						margin-right: 10px;
-						width: 20px;
-						text-align: center;
-					}
-
-					&:hover {
-						background-color: #f5f5f5;
-						color: $blue;
-					}
-
+					color: $text-link-hover;
 				}
 
 			}
